# Open-Financial-LLMs-Leaderboard

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  LICENSE.spdx  NOTICE  README.md  app.py  content.py  contents.py  docker-compose.yml  elo_utils.py  main_backend.py  model_info_cache.pkl  model_size_cache.pkl  models_backlinks.py  pyproject.toml  requirements.txt  utils.py  visualizations.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: Meeting_minutes.md
.github/Issue_template/: meeting_minutes.md
.github/workflows/: main.yml
backend/: Dockerfile.dev  README.md  pyproject.toml
backend/app/: asgi.py  main.py
backend/app/api/: __init__.py  dependencies.py  router.py
backend/app/api/endpoints/: leaderboard.py  models.py  votes.py
backend/app/config/: __init__.py  base.py  hf_config.py  logging_config.py
backend/app/core/: cache.py  fastapi_cache.py
backend/app/services/: __init__.py  hf_service.py  leaderboard.py  models.py  rate_limiter.py  votes.py
backend/app/utils/: __init__.py  logging.py  model_validation.py
backend/utils/: analyze_prod_datasets.py  analyze_prod_models.py  fix_wrong_model_size.py  last_activity.py  sync_datasets_locally.py
examples/: model_evaluation.ipynb
frontend/: Dockerfile.dev  README.md  package.json  server.js
frontend/public/: index.html
frontend/src/: App.js
scripts/: create_request_file.py
src/: about.py  envs.py  filters.py  init.py  load_from_hub.py  manage_collections.py  populate.py  rate_limiting.py  utils_display.py
src/assets/: css_html_js.py  (+2 more)
(+79 files in other folders)
